[gd_scene load_steps=6 format=3 uid="uid://ch220igetl3l4"]

[ext_resource type="Script" uid="uid://jvb3ptapnvcr" path="res://assets/scenes/egg_shop.gd" id="1_u7tvb"]
[ext_resource type="Texture2D" uid="uid://ca2o8m1mtcwdg" path="res://assets/art/eggs/common_egg.png" id="2_y22a4"]
[ext_resource type="Texture2D" uid="uid://706dj704s1x8" path="res://assets/art/eggs/rare_egg.png" id="3_4w2ju"]
[ext_resource type="FontFile" uid="uid://cd1aioybntas7" path="res://assets/fonts/Sniglet-Regular.ttf" id="3_b2nem"]
[ext_resource type="Texture2D" uid="uid://dcgiwvyk33ntw" path="res://assets/art/eggs/epic_egg.png" id="4_xo7jn"]

[node name="EggShop" type="Node2D"]
script = ExtResource("1_u7tvb")

[node name="EggContainer" type="HBoxContainer" parent="."]
offset_top = 536.0
offset_right = 1279.0
offset_bottom = 722.0
size_flags_horizontal = 3
theme_override_constants/separation = 350
alignment = 1

[node name="EggCommon" type="VBoxContainer" parent="EggContainer"]
layout_mode = 2

[node name="CommonEgg" type="Sprite2D" parent="EggContainer/EggCommon"]
position = Vector2(27, -175)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_y22a4")

[node name="PriceLabel" type="Label" parent="EggContainer/EggCommon"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "$10"
horizontal_alignment = 1

[node name="BuyButtonCommon" type="Button" parent="EggContainer/EggCommon"]
layout_mode = 2
text = "Buy"

[node name="EggRare" type="VBoxContainer" parent="EggContainer"]
layout_mode = 2

[node name="RareEgg" type="Sprite2D" parent="EggContainer/EggRare"]
position = Vector2(27, -175)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_4w2ju")

[node name="PriceLabel" type="Label" parent="EggContainer/EggRare"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "$50"
horizontal_alignment = 1

[node name="BuyButtonRare" type="Button" parent="EggContainer/EggRare"]
layout_mode = 2
text = "Buy"

[node name="EggEpic" type="VBoxContainer" parent="EggContainer"]
layout_mode = 2

[node name="EpicEgg" type="Sprite2D" parent="EggContainer/EggEpic"]
position = Vector2(36, -175)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_xo7jn")

[node name="PriceLabel" type="Label" parent="EggContainer/EggEpic"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "$200"
horizontal_alignment = 1

[node name="BuyButtonEpic" type="Button" parent="EggContainer/EggEpic"]
layout_mode = 2
text = "Buy"

[node name="MoneyLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1045.0
offset_top = 21.0
offset_right = 1259.0
offset_bottom = 94.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="ConfirmationPopup" type="ConfirmationDialog" parent="."]

[node name="SuccessLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 463.0
offset_top = 1.0
offset_right = 807.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="."]
offset_left = 37.0
offset_top = 51.0
offset_right = 229.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("3_b2nem")
theme_override_font_sizes/font_size = 24
text = "Back to Village"

[node name="LimitPopup" type="ConfirmationDialog" parent="."]

[connection signal="pressed" from="EggContainer/EggCommon/BuyButtonCommon" to="." method="_on_buy_button_common_pressed"]
[connection signal="pressed" from="EggContainer/EggRare/BuyButtonRare" to="." method="_on_buy_button_rare_pressed"]
[connection signal="pressed" from="EggContainer/EggEpic/BuyButtonEpic" to="." method="_on_buy_button_epic_pressed"]
[connection signal="confirmed" from="ConfirmationPopup" to="." method="_on_confirmation_popup_confirmed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="confirmed" from="LimitPopup" to="." method="_on_limit_popup_confirmed"]
